--- a/cosmos.html
+++ b/cosmos.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Discovere all the unique and interactive exhibitions taking place near you. Plan your visit today."
+      content="Discover all the different collection the museum has to offer. Everything from robotics, biology and medicine to spacetravel. "
     />
 
-    <title>Exhibitions | Unique and interactive exhibitions.</title>
+    <title>Collections of the museum.</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
 
     <link rel="stylesheet" href="assets/css/tablet.css" />
@@ -41,10 +41,10 @@
               <a href="join.html"> Take part</a>
             </div>
             <div class="bottom-row">
-              <a href="visit.html">Plan Visit</a>
-              <a href="exhibitions.html">Exhibitions</a>
-              <a href="collections.html">Collections</a>
-              <a href="tickets.html">Tickets</a>
+              <a href="robotics.html" class="link1">Robotics and AI</a>
+              <a href="biology.html" class="link2">Biology and Medicine</a>
+              <a href="cosmos.html" class="link3">Cosmology</a>
+              <a href="evolution.html" class="link4">Evolution</a>
             </div>
           </div>
         </nav>
@@ -89,99 +89,34 @@
     </header>
     <main>
       <div class="cover">
-        <div class="exhibition-img">
-          <img
-            src="assets/images/elephant-lobby.jpg"
-            alt="Life sized model of an elephant"
-          />
-        </div>
-        <div class="enterexhibition">
-          <h1><a href="tickets.html">Night in the Museum</a></h1>
-        </div>
-      </div>
-      <div class="page-container">
-        <div class="info-box">
-          <p>
-            Night in the Museum Get your family together for an exciting night
-            in the museum as you sleep over beside dinosaurs and science
-            displays. Bring your own sleeping bag and get ready to rough it as
-            we go exploring the wonders of science.
-          </p>
-        </div>
-      </div>
-      <div class="cover">
-        <!-- without margin-->
-        <div class="exhibition-img">
-          <img
-            src="assets/images/eclipse.jpg"
-            alt="Solar eclipce shown stage by stage."
-            class="cropped-image"
-          />
-        </div>
-        <div class="enterexhibition">
-          <h1><a href="exhibitions.html">Energetica</a></h1>
-        </div>
-      </div>
-      <div class="cover">
-        <div class="exhibition-img">
-          <img
-            src="assets/images/andrew-ruiz.jpg"
-            alt="Astronaut in yellow suit."
-            class="cropped-image"
-          />
-        </div>
-        <div class="enterexhibition">
-          <h1><a href="exhibitions.html">Professor of Aeronautics</a></h1>
-        </div>
+        <img
+          src="assets/images/mammoth.jpg"
+          alt="Mammoth skelleton."
+          class="cropped-image"
+        />
       </div>
 
       <div class="page-container">
-        <!--adn this one-->
-        <div class="info-box">
-          <h3>Explore together</h3>
-          <p>
-            Come join us at the Community Science Museum where we’re committed
-            to making science accessible to all. Over the course of human
-            history, science has developed from our early understanding of fire,
-            wind, water, and earth to exploring everything from galaxies far
-            away to the very building blocks of life itself.
-          </p>
-        </div>
-      </div>
-      <div class="page-container">
-        <div class="info-box">
-          <a href="groups.html">
-            <h3 class="button-base button">Young Stars Club</h3></a
-          >
-
-          <p>
-            Come join us at the Community Science Museum where we’re committed
-            to making science accessible to all. Over the course of human
-            history, science has developed from our early understanding of fire,
-            wind, water, and earth to exploring everything from galaxies far
-            away to the very building blocks of life itself.
-          </p>
-        </div>
-        <!-- check out this container-->
+        <h1 class="h-styling">Collections</h1>
         <div class="grid-container">
           <div class="img1">
             <img
               src="assets/images/VR-painting.jpg"
-              alt="Boy using VR/glasses"
+              alt="Boy using VR-glasses to paint."
               class="img"
             />
           </div>
           <div class="img2">
             <img
               src="assets/images/heart.jpg"
-              alt="Heart display"
+              alt="Anatomical model of a heart."
               class="img"
             />
           </div>
           <div class="img3">
             <img
               src="assets/images/andrew-ruiz.jpg"
-              alt="Astronaut"
+              alt="Astronaut in yellow suit."
               class="img"
             />
           </div>
@@ -193,14 +128,55 @@
             />
           </div>
 
-          <a href="robotics.html" class="link1">Robotics and AI</a>
-          <a href="biology.html" class="link2">Biology and Medicine</a>
-          <a href="cosmos.html" class="link3">Cosmology</a>
-          <a href="evolution.html" class="link4">Evolution</a>
+          <a href="collections.html" class="link1">Robotics and AI</a>
+          <a href="collections.html" class="link2">Biology and Medicine</a>
+          <a href="collections.html" class="link3">Cosmology</a>
+          <a href="collections.html" class="link4">Evolution</a>
+        </div>
+
+        <div class="info-box">
+          <h2 class="h-styling">Biology and Medicine</h2>
+        </div>
+
+        <div class="cover">
+          <div class="exhibition-img">
+            <img
+              src="assets/images/microscope.jpg"
+              alt="Man looking into a microscope."
+              class="cropped-image"
+            />
+          </div>
+        </div>
+        <div class="info-box">
+          <p>
+            From micro-organisms to the human body, major breakthroughs in
+            biology are offering us unique insights into the great wonders of
+            the tiny world.
+          </p>
+          <p>
+            For many people their life expectancy is much longer and their
+            quality of life much improved, thanks to the growth of our
+            understanding of medicine. Over a series of exhibits we explore the
+            history of medicine and take a look at some major breakthroughs
+            including the discovery of penicillin and the first heart
+            transplant.
+          </p>
+          <p>
+            Many of our great medicinal discoveries have come not only from the
+            lab, but also from observing animals in the wild. Often our fellow
+            creatures have beat us to it.
+          </p>
+        </div>
+        <div class="club">
+          <div class="club-box">
+            <img src="assets/images/vr-red.jpg" alt="Boy with VR glasses on." />
+          </div>
+          <a href="exhibitions.html" class="club-box club-enter">
+            <h2>Robotics and AI</h2></a
+          >
         </div>
       </div>
     </main>
-
     <footer class="nav-items">
       <div>
         <nav aria-label="Footer Navigation" class="flex-one_">
