--- a/exhibitions.html
+++ b/exhibitions.html
@@ -137,6 +137,7 @@
 
       <div class="page-container">
         <!--adn this one-->
+
         <div class="info-box">
           <h3>Explore together</h3>
           <p>
@@ -148,20 +149,23 @@
           </p>
         </div>
       </div>
-      <div class="page-container">
-        <div class="info-box">
-          <a href="groups.html">
-            <h3 class="button-base button">Young Stars Club</h3></a
-          >
 
-          <p>
-            Come join us at the Community Science Museum where we’re committed
-            to making science accessible to all. Over the course of human
-            history, science has developed from our early understanding of fire,
-            wind, water, and earth to exploring everything from galaxies far
-            away to the very building blocks of life itself.
-          </p>
+      <div class="page-container">
+        <div class="info-box box-link">
+          <div class="paragraph">
+            <a href="groups.html" class="box-link-button">Young Stars Club</a>
+          </div>
+          <div class="paragraph">
+            <p>
+              Come join us at the Community Science Museum where we’re committed
+              to making science accessible to all. Over the course of human
+              history, science has developed from our early understanding of
+              fire, wind, water, and earth to exploring everything from galaxies
+              far away to the very building blocks of life itself.
+            </p>
+          </div>
         </div>
+
         <!-- check out this container-->
         <div class="grid-container">
           <div class="img1">
