--- a/exhibitions.html
+++ b/exhibitions.html
@@ -96,7 +96,9 @@
           />
         </div>
         <div class="enterexhibition">
-          <h1><a href="tickets.html">Night in the Museum</a></h1>
+          <h1 class="h-styling">
+            <a href="tickets.html">Night in the Museum</a>
+          </h1>
         </div>
       </div>
       <div class="page-container">
@@ -119,7 +121,7 @@
           />
         </div>
         <div class="enterexhibition">
-          <h1><a href="exhibitions.html">Energetica</a></h1>
+          <h2 class="h-styling"><a href="exhibitions.html">Energetica</a></h2>
         </div>
       </div>
       <div class="cover">
@@ -131,7 +133,9 @@
           />
         </div>
         <div class="enterexhibition">
-          <h1><a href="exhibitions.html">Professor of Aeronautics</a></h1>
+          <h2 class="h-styling">
+            <a href="exhibitions.html">Professor of Aeronautics</a>
+          </h2>
         </div>
       </div>
 
