--- a/exhibitions.html
+++ b/exhibitions.html
@@ -121,7 +121,7 @@
           />
         </div>
         <div class="enterexhibition">
-          <h2 class="h-styling"><a href="exhibitions.html">Energetica</a></h2>
+          <h2 class="h-styling"><a href="tickets.html">Energetica</a></h2>
         </div>
       </div>
       <div class="cover">
@@ -134,7 +134,7 @@
         </div>
         <div class="enterexhibition">
           <h2 class="h-styling">
-            <a href="exhibitions.html">Professor of Aeronautics</a>
+            <a href="tickets.html">Professor of Aeronautics</a>
           </h2>
         </div>
       </div>
