--- a/visit.html
+++ b/visit.html
@@ -99,10 +99,11 @@
         <h1 class="h-styling">Plan your visit</h1>
 
         <div class="info-box">
+          <h2 class="h-styling">When and how to find us</h2>
           <div class="box-paragraph">
             <div class="paragraph">
               <dl>
-                <dt><h2 class="h-styling">Opening hours</h2></dt>
+                <dt>OPENING HOURS</dt>
                 <dd>Monday - Closed</dd>
                 <dd>Tuesday-Thursday: 10:00 - 16:00</dd>
 
@@ -119,7 +120,7 @@
                 </dt>
               </dl>
               <dl class="space">
-                <dt><h2 class="h-styling space">Location</h2></dt>
+                <dt class="space">LOCATION</dt>
                 <dd>Havnegata 13, 4306 Sandnes</dd>
               </dl>
             </div>
