--- a/visit.html
+++ b/visit.html
@@ -113,12 +113,9 @@
               </dl>
             </div>
 
-            <div class="paragraph">
-              <dl class="space">
-                <dd>
-                  <a href="tickets.html" class="button button-base">Tickets</a>
-                </dd>
-              </dl>
+            <div class="paragraph space">
+              <a href="tickets.html" class="button button-base">Tickets</a>
+
               <dl class="space">
                 <dt class="space">LOCATION</dt>
                 <dd>Havnegata 13, 4306 Sandnes</dd>
