--- a/collections.html
+++ b/collections.html
@@ -73,14 +73,16 @@
                   class="search-input"
                   placeholder="Search..."
                 />
-                <ul>
-                  <li><a href="visit.html">Plan Visit</a></li>
-                  <li><a href="exhibitions.html">Exhibitions</a></li>
-                  <li><a href="collections.html">Collections</a></li>
-                  <li><a href="groups.html">Groups</a></li>
-                  <li><a href="join.html"> Take part</a></li>
-                  <li><a href="tickets.html">Tickets</a></li>
-                </ul>
+                <div>
+                  <ul>
+                    <li><a href="visit.html">Plan Visit</a></li>
+                    <li><a href="exhibitions.html">Exhibitions</a></li>
+                    <li><a href="collections.html">Collections</a></li>
+                    <li><a href="groups.html">Groups</a></li>
+                    <li><a href="join.html"> Take part</a></li>
+                    <li><a href="tickets.html">Tickets</a></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
