--- a/evolution.html
+++ b/evolution.html
@@ -41,10 +41,10 @@
               <a href="join.html"> Take part</a>
             </div>
             <div class="bottom-row">
-              <a href="robotics.html" class="link1">Robotics and AI</a>
-              <a href="biology.html" class="link2">Biology and Medicine</a>
-              <a href="cosmos.html" class="link3">Cosmology</a>
-              <a href="evolution.html" class="link4">Evolution</a>
+              <a href="visit.html">Plan Visit</a>
+              <a href="exhibitions.html">Exhibitions</a>
+              <a href="collections.html">Collections</a>
+              <a href="tickets.html">Tickets</a>
             </div>
           </div>
         </nav>
@@ -128,10 +128,10 @@
             />
           </div>
 
-          <a href="collections.html" class="link1">Robotics and AI</a>
-          <a href="collections.html" class="link2">Biology and Medicine</a>
-          <a href="collections.html" class="link3">Cosmology</a>
-          <a href="collections.html" class="link4">Evolution</a>
+          <a href="robotics.html" class="link1">Robotics and AI</a>
+          <a href="biology.html" class="link2">Biology and Medicine</a>
+          <a href="cosmos.html" class="link3">Cosmology</a>
+          <a href="evolution.html" class="link4">Evolution</a>
         </div>
 
         <div class="info-box">
