--- a/tickets.html
+++ b/tickets.html
@@ -99,7 +99,7 @@
         </div>
         <div class="enterexhibition">
           <h1><a href="exhibitions.html">Professor of Aeronautics</a></h1>
-        </div>
+        </div></div>
 
         <div class="page-container">
           <form id="ticket-form">
