--- a/tickets.html
+++ b/tickets.html
@@ -155,7 +155,7 @@
                 <div class="link1">
                   <div class="step" id="step-1">
                     <label for="day">Select Day:</label>
-                    <select id="day" name="day">
+                    <select id="day" name="day" class="textcol">
                       <option value="Tuesday">Tuesday</option>
                       <option value="Wednesday">Wednesday</option>
                       <option value="Thursday">Thursday</option>
