--- a/tickets.html
+++ b/tickets.html
@@ -169,7 +169,7 @@
                 <div class="link2">
                   <div class="step" id="step-2">
                     <label for="time">Select Time:</label>
-                    <select id="time" name="time">
+                    <select id="time" name="time" class="textcol">
                       <optgroup label="Exhibition 1">
                         <option value="21:00">21:00</option>
                       </optgroup>
@@ -190,7 +190,7 @@
                 <div class="link3">
                   <div class="step" id="step-3">
                     <label for="ticket-category">Select Ticket Category:</label>
-                    <select id="ticket-category" name="ticket-category">
+                    <select id="ticket-category" name="ticket-category" class="textcol">
                       <option value="adult">Adult (150 NOK)</option>
                       <option value="child">Child (70 NOK)</option>
                     </select>
@@ -204,7 +204,7 @@
                     name="quantity"
                     min="1"
                     required
-                  />
+                 class="textcol" />
                 </div>
 
                 <div class="link5">
